# mpc-workspace

./: Cargo.toml  Dockerfile  LICENSE  README.adoc  build.sh
core/mcp-network-core/: Cargo.toml
core/mcp-network-core/src/: lib.rs
servers/mcp-calc/: Cargo.toml
servers/mcp-calc/src/: config.rs  error.rs  handlers.rs  main.rs  state.rs
servers/mcp-kroki-bridge/: Cargo.toml
servers/mcp-kroki-bridge/src/: config.rs  error.rs  handlers.rs  main.rs  state.rs
servers/mcp-pg-paitrimony/: Cargo.toml
servers/mcp-pg-paitrimony/src/: config.rs  error.rs  handlers.rs  main.rs  state.rs
servers/mcp-searxng-bridge/: Cargo.toml  README.adoc
servers/mcp-searxng-bridge/src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  state.rs
servers/template/: Cargo.toml
servers/template/src/: config.rs  error.rs  handlers.rs  main.rs  state.rs
