[package]
name = "mcp-network-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Héritage des dépendances du workspace
axum.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
tower-http.workspace = true
tracing.workspace = true
