[package]
name = "mcp-kroki-bridge"     # TO DO: Renommer
version = "1.0.0"                # TO DO: Versionner
edition = "2024"

[[bin]]
name = "mcp-kroki-bridge"     # TO DO: Même nom
path = "src/main.rs"

[dependencies]
mcp-network-core = { path = "../../core/mcp-network-core" }
serde.workspace = true
serde_json.workspace = true
envy.workspace = true
tracing.workspace = true
tokio.workspace = true
thiserror.workspace = true

# TO DO: Dépendances métier
