[package]
name = "mcp-searxng-bridge"     
version = "1.0.0"                
edition = "2024"

[[bin]]
name = "mcp-searxng-bridge"     
path = "src/main.rs"

[dependencies]
mcp-network-core = { path = "../../core/mcp-network-core" }
serde.workspace = true
serde_json.workspace = true
envy.workspace = true
tracing.workspace = true
tokio.workspace = true
thiserror.workspace = true

#tracing-subscriber = { version = "0.3", features = ["env-filter"] }
html2md = "0.2" 
scraper = "0.19" 

axum = { version = "0.7", features = ["macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace"] }
